[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dramatiq-vtq"
description = "Versatile Task Queue based broker for Dramtatiq"
version = "0.0.1"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["task queue", "Dramtatiq", "versatile task queue", "vtq", "broker"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = ["versatile-task-queue", "dramatiq~=1.15.0"]
requires-python = ">= 3.12"


[project.optional-dependencies]
dev = ["pytest"]


[project.urls]
Homepage = "https://github.com/GitterRemote/dramatiq-vtq"
Issues = "https://github.com/GitterRemote/dramatiq-vtq/issues"
